Sintax/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------

state 97 contains 10 reduce/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> E                                 (0)
	E -> num                                           (1)
	E -> bool                                          (2)
	E -> var                                           (3)
	E -> float                                         (4)
	E -> E '+' E                                       (5)
	E -> E '-' E                                       (6)
	E -> E '*' E                                       (7)
	E -> E '/' E                                       (8)
	E -> E '%' E                                       (9)
	E -> E '==' E                                      (10)
	E -> E '>' E                                       (11)
	E -> E '<' E                                       (12)
	E -> E '>=' E                                      (13)
	E -> E '<=' E                                      (14)
	E -> E '&&' E                                      (15)
	E -> E '||' E                                      (16)
	E -> not E                                         (17)
	E -> '-' E                                         (18)
	E -> pot E                                         (19)
	E -> sqrt E                                        (20)
	E -> '(' E ')'                                     (21)
	E -> '(' E E ')'                                   (22)
	E -> if E then E else E                            (23)
	E -> let var '=' E in E end                        (24)
	E -> lam '(' var ':' T ')' ':' T '->' E            (25)
	E -> '(' E ',' E ')'                               (26)
	E -> fst E                                         (27)
	E -> snd E                                         (28)
	E -> inl '_' T '(' E ')'                           (29)
	E -> inr '_' T '(' E ')'                           (30)
	E -> case E of '{' inl var '=>' E '|' inr var '=>' E '}'   (31)
	E -> '{' reglist '}'                               (32)
	E -> E '[' var ']'                                 (33)
	reglist -> reg                                     (34)
	reglist -> reglist ',' reg                         (35)
	reg -> var '=' E                                   (36)
	reglistT -> regT                                   (37)
	reglistT -> reglistT ',' regT                      (38)
	regT -> var ':' T                                  (39)
	T -> Bool                                          (40)
	T -> Int                                           (41)
	T -> Float                                         (42)
	T -> T '->' T                                      (43)
	T -> T '*' T                                       (44)
	T -> T '+' T                                       (45)
	T -> '{' reglistT '}'                              (46)
	T -> '(' T ')'                                     (47)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	num            { TokenInt $$ }
	float          { TokenFloat $$ }
	var            { TokenVar $$ }
	bool           { TokenBool $$ }
	'('            { TokenOB }
	')'            { TokenCB }
	'+'            { TokenPlus }
	'-'            { TokenMinus }
	'*'            { TokenTimes }
	'/'            { TokenDiv }
	'%'            { TokenMod }
	'=='           { TokenEq }
	'>'            { TokenGt }
	'<'            { TokenLt }
	'>='           { TokenGeq }
	'<='           { TokenLeq }
	'&&'           { TokenAnd }
	'||'           { TokenOr }
	not            { TokenNot }
	if             { TokenIf }
	then           { TokenThen }
	else           { TokenElse }
	let            { TokenLet }
	'='            { TokenAssign }
	in             { TokenIn }
	end            { TokenEnd }
	lam            { TokenLam }
	'->'           { TokenArrow }
	':'            { TokenTypeOf }
	'{'            { TokenOK }
	'}'            { TokenCK }
	','            { TokenComma }
	'['            { TokenOC }
	']'            { TokenCC }
	fst            { TokenFst }
	snd            { TokenSnd }
	inr            { TokenInr }
	inl            { TokenInL }
	'_'            { TokenUnderS }
	case           { TokenCase }
	of             { TokenOf }
	'=>'           { TokenBigArrow }
	'|'            { TokenPipe }
	Int            { TokenTInt }
	Float          { TokenTFloat }
	Bool           { TokenTBool }
	pot            { TokenPot }
	sqrt           { TokenSqrt }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	E               rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33
	reglist         rules 34, 35
	reg             rule  36
	reglistT        rules 37, 38
	regT            rule  39
	T               rules 40, 41, 42, 43, 44, 45, 46, 47

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parser -> . E                                (rule 0)

	num            shift, and enter state 2
	float          shift, and enter state 4
	var            shift, and enter state 5
	bool           shift, and enter state 6
	'('            shift, and enter state 7
	'-'            shift, and enter state 8
	not            shift, and enter state 9
	if             shift, and enter state 10
	let            shift, and enter state 11
	lam            shift, and enter state 12
	'{'            shift, and enter state 13
	fst            shift, and enter state 14
	snd            shift, and enter state 15
	inr            shift, and enter state 16
	inl            shift, and enter state 17
	case           shift, and enter state 18
	pot            shift, and enter state 19
	sqrt           shift, and enter state 20

	E              goto state 3

State 1

	E -> . num                                          (rule 1)

	num            shift, and enter state 2


State 2

	E -> num .                                          (rule 1)

	num            reduce using rule 1
	float          reduce using rule 1
	var            reduce using rule 1
	bool           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'+'            reduce using rule 1
	'-'            reduce using rule 1
	'*'            reduce using rule 1
	'/'            reduce using rule 1
	'%'            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'<'            reduce using rule 1
	'>='           reduce using rule 1
	'<='           reduce using rule 1
	'&&'           reduce using rule 1
	'||'           reduce using rule 1
	not            reduce using rule 1
	if             reduce using rule 1
	then           reduce using rule 1
	else           reduce using rule 1
	let            reduce using rule 1
	in             reduce using rule 1
	end            reduce using rule 1
	lam            reduce using rule 1
	'{'            reduce using rule 1
	'}'            reduce using rule 1
	','            reduce using rule 1
	'['            reduce using rule 1
	fst            reduce using rule 1
	snd            reduce using rule 1
	inr            reduce using rule 1
	inl            reduce using rule 1
	case           reduce using rule 1
	of             reduce using rule 1
	'|'            reduce using rule 1
	pot            reduce using rule 1
	sqrt           reduce using rule 1
	%eof           reduce using rule 1


State 3

	%start_parser -> E .                                (rule 0)
	E -> E . '+' E                                      (rule 5)
	E -> E . '-' E                                      (rule 6)
	E -> E . '*' E                                      (rule 7)
	E -> E . '/' E                                      (rule 8)
	E -> E . '%' E                                      (rule 9)
	E -> E . '==' E                                     (rule 10)
	E -> E . '>' E                                      (rule 11)
	E -> E . '<' E                                      (rule 12)
	E -> E . '>=' E                                     (rule 13)
	E -> E . '<=' E                                     (rule 14)
	E -> E . '&&' E                                     (rule 15)
	E -> E . '||' E                                     (rule 16)
	E -> E . '[' var ']'                                (rule 33)

	'+'            shift, and enter state 37
	'-'            shift, and enter state 38
	'*'            shift, and enter state 39
	'/'            shift, and enter state 40
	'%'            shift, and enter state 41
	'=='           shift, and enter state 42
	'>'            shift, and enter state 43
	'<'            shift, and enter state 44
	'>='           shift, and enter state 45
	'<='           shift, and enter state 46
	'&&'           shift, and enter state 47
	'||'           shift, and enter state 48
	'['            shift, and enter state 49
	%eof           accept


State 4

	E -> float .                                        (rule 4)

	num            reduce using rule 4
	float          reduce using rule 4
	var            reduce using rule 4
	bool           reduce using rule 4
	'('            reduce using rule 4
	')'            reduce using rule 4
	'+'            reduce using rule 4
	'-'            reduce using rule 4
	'*'            reduce using rule 4
	'/'            reduce using rule 4
	'%'            reduce using rule 4
	'=='           reduce using rule 4
	'>'            reduce using rule 4
	'<'            reduce using rule 4
	'>='           reduce using rule 4
	'<='           reduce using rule 4
	'&&'           reduce using rule 4
	'||'           reduce using rule 4
	not            reduce using rule 4
	if             reduce using rule 4
	then           reduce using rule 4
	else           reduce using rule 4
	let            reduce using rule 4
	in             reduce using rule 4
	end            reduce using rule 4
	lam            reduce using rule 4
	'{'            reduce using rule 4
	'}'            reduce using rule 4
	','            reduce using rule 4
	'['            reduce using rule 4
	fst            reduce using rule 4
	snd            reduce using rule 4
	inr            reduce using rule 4
	inl            reduce using rule 4
	case           reduce using rule 4
	of             reduce using rule 4
	'|'            reduce using rule 4
	pot            reduce using rule 4
	sqrt           reduce using rule 4
	%eof           reduce using rule 4


State 5

	E -> var .                                          (rule 3)

	num            reduce using rule 3
	float          reduce using rule 3
	var            reduce using rule 3
	bool           reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	'+'            reduce using rule 3
	'-'            reduce using rule 3
	'*'            reduce using rule 3
	'/'            reduce using rule 3
	'%'            reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'<'            reduce using rule 3
	'>='           reduce using rule 3
	'<='           reduce using rule 3
	'&&'           reduce using rule 3
	'||'           reduce using rule 3
	not            reduce using rule 3
	if             reduce using rule 3
	then           reduce using rule 3
	else           reduce using rule 3
	let            reduce using rule 3
	in             reduce using rule 3
	end            reduce using rule 3
	lam            reduce using rule 3
	'{'            reduce using rule 3
	'}'            reduce using rule 3
	','            reduce using rule 3
	'['            reduce using rule 3
	fst            reduce using rule 3
	snd            reduce using rule 3
	inr            reduce using rule 3
	inl            reduce using rule 3
	case           reduce using rule 3
	of             reduce using rule 3
	'|'            reduce using rule 3
	pot            reduce using rule 3
	sqrt           reduce using rule 3
	%eof           reduce using rule 3


State 6

	E -> bool .                                         (rule 2)

	num            reduce using rule 2
	float          reduce using rule 2
	var            reduce using rule 2
	bool           reduce using rule 2
	'('            reduce using rule 2
	')'            reduce using rule 2
	'+'            reduce using rule 2
	'-'            reduce using rule 2
	'*'            reduce using rule 2
	'/'            reduce using rule 2
	'%'            reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'<'            reduce using rule 2
	'>='           reduce using rule 2
	'<='           reduce using rule 2
	'&&'           reduce using rule 2
	'||'           reduce using rule 2
	not            reduce using rule 2
	if             reduce using rule 2
	then           reduce using rule 2
	else           reduce using rule 2
	let            reduce using rule 2
	in             reduce using rule 2
	end            reduce using rule 2
	lam            reduce using rule 2
	'{'            reduce using rule 2
	'}'            reduce using rule 2
	','            reduce using rule 2
	'['            reduce using rule 2
	fst            reduce using rule 2
	snd            reduce using rule 2
	inr            reduce using rule 2
	inl            reduce using rule 2
	case           reduce using rule 2
	of             reduce using rule 2
	'|'            reduce using rule 2
	pot            reduce using rule 2
	sqrt           reduce using rule 2
	%eof           reduce using rule 2


State 7

	E -> '(' . E ')'                                    (rule 21)
	E -> '(' . E E ')'                                  (rule 22)
	E -> '(' . E ',' E ')'                              (rule 26)

	num            shift, and enter state 2
	float          shift, and enter state 4
	var            shift, and enter state 5
	bool           shift, and enter state 6
	'('            shift, and enter state 7
	'-'            shift, and enter state 8
	not            shift, and enter state 9
	if             shift, and enter state 10
	let            shift, and enter state 11
	lam            shift, and enter state 12
	'{'            shift, and enter state 13
	fst            shift, and enter state 14
	snd            shift, and enter state 15
	inr            shift, and enter state 16
	inl            shift, and enter state 17
	case           shift, and enter state 18
	pot            shift, and enter state 19
	sqrt           shift, and enter state 20

	E              goto state 36

State 8

	E -> '-' . E                                        (rule 18)

	num            shift, and enter state 2
	float          shift, and enter state 4
	var            shift, and enter state 5
	bool           shift, and enter state 6
	'('            shift, and enter state 7
	'-'            shift, and enter state 8
	not            shift, and enter state 9
	if             shift, and enter state 10
	let            shift, and enter state 11
	lam            shift, and enter state 12
	'{'            shift, and enter state 13
	fst            shift, and enter state 14
	snd            shift, and enter state 15
	inr            shift, and enter state 16
	inl            shift, and enter state 17
	case           shift, and enter state 18
	pot            shift, and enter state 19
	sqrt           shift, and enter state 20

	E              goto state 35

State 9

	E -> not . E                                        (rule 17)

	num            shift, and enter state 2
	float          shift, and enter state 4
	var            shift, and enter state 5
	bool           shift, and enter state 6
	'('            shift, and enter state 7
	'-'            shift, and enter state 8
	not            shift, and enter state 9
	if             shift, and enter state 10
	let            shift, and enter state 11
	lam            shift, and enter state 12
	'{'            shift, and enter state 13
	fst            shift, and enter state 14
	snd            shift, and enter state 15
	inr            shift, and enter state 16
	inl            shift, and enter state 17
	case           shift, and enter state 18
	pot            shift, and enter state 19
	sqrt           shift, and enter state 20

	E              goto state 34

State 10

	E -> if . E then E else E                           (rule 23)

	num            shift, and enter state 2
	float          shift, and enter state 4
	var            shift, and enter state 5
	bool           shift, and enter state 6
	'('            shift, and enter state 7
	'-'            shift, and enter state 8
	not            shift, and enter state 9
	if             shift, and enter state 10
	let            shift, and enter state 11
	lam            shift, and enter state 12
	'{'            shift, and enter state 13
	fst            shift, and enter state 14
	snd            shift, and enter state 15
	inr            shift, and enter state 16
	inl            shift, and enter state 17
	case           shift, and enter state 18
	pot            shift, and enter state 19
	sqrt           shift, and enter state 20

	E              goto state 33

State 11

	E -> let . var '=' E in E end                       (rule 24)

	var            shift, and enter state 32


State 12

	E -> lam . '(' var ':' T ')' ':' T '->' E           (rule 25)

	'('            shift, and enter state 31


State 13

	E -> '{' . reglist '}'                              (rule 32)

	var            shift, and enter state 30

	reglist        goto state 28
	reg            goto state 29

State 14

	E -> fst . E                                        (rule 27)

	num            shift, and enter state 2
	float          shift, and enter state 4
	var            shift, and enter state 5
	bool           shift, and enter state 6
	'('            shift, and enter state 7
	'-'            shift, and enter state 8
	not            shift, and enter state 9
	if             shift, and enter state 10
	let            shift, and enter state 11
	lam            shift, and enter state 12
	'{'            shift, and enter state 13
	fst            shift, and enter state 14
	snd            shift, and enter state 15
	inr            shift, and enter state 16
	inl            shift, and enter state 17
	case           shift, and enter state 18
	pot            shift, and enter state 19
	sqrt           shift, and enter state 20

	E              goto state 27

State 15

	E -> snd . E                                        (rule 28)

	num            shift, and enter state 2
	float          shift, and enter state 4
	var            shift, and enter state 5
	bool           shift, and enter state 6
	'('            shift, and enter state 7
	'-'            shift, and enter state 8
	not            shift, and enter state 9
	if             shift, and enter state 10
	let            shift, and enter state 11
	lam            shift, and enter state 12
	'{'            shift, and enter state 13
	fst            shift, and enter state 14
	snd            shift, and enter state 15
	inr            shift, and enter state 16
	inl            shift, and enter state 17
	case           shift, and enter state 18
	pot            shift, and enter state 19
	sqrt           shift, and enter state 20

	E              goto state 26

State 16

	E -> inr . '_' T '(' E ')'                          (rule 30)

	'_'            shift, and enter state 25


State 17

	E -> inl . '_' T '(' E ')'                          (rule 29)

	'_'            shift, and enter state 24


State 18

	E -> case . E of '{' inl var '=>' E '|' inr var '=>' E '}'    (rule 31)

	num            shift, and enter state 2
	float          shift, and enter state 4
	var            shift, and enter state 5
	bool           shift, and enter state 6
	'('            shift, and enter state 7
	'-'            shift, and enter state 8
	not            shift, and enter state 9
	if             shift, and enter state 10
	let            shift, and enter state 11
	lam            shift, and enter state 12
	'{'            shift, and enter state 13
	fst            shift, and enter state 14
	snd            shift, and enter state 15
	inr            shift, and enter state 16
	inl            shift, and enter state 17
	case           shift, and enter state 18
	pot            shift, and enter state 19
	sqrt           shift, and enter state 20

	E              goto state 23

State 19

	E -> pot . E                                        (rule 19)

	num            shift, and enter state 2
	float          shift, and enter state 4
	var            shift, and enter state 5
	bool           shift, and enter state 6
	'('            shift, and enter state 7
	'-'            shift, and enter state 8
	not            shift, and enter state 9
	if             shift, and enter state 10
	let            shift, and enter state 11
	lam            shift, and enter state 12
	'{'            shift, and enter state 13
	fst            shift, and enter state 14
	snd            shift, and enter state 15
	inr            shift, and enter state 16
	inl            shift, and enter state 17
	case           shift, and enter state 18
	pot            shift, and enter state 19
	sqrt           shift, and enter state 20

	E              goto state 22

State 20

	E -> sqrt . E                                       (rule 20)

	num            shift, and enter state 2
	float          shift, and enter state 4
	var            shift, and enter state 5
	bool           shift, and enter state 6
	'('            shift, and enter state 7
	'-'            shift, and enter state 8
	not            shift, and enter state 9
	if             shift, and enter state 10
	let            shift, and enter state 11
	lam            shift, and enter state 12
	'{'            shift, and enter state 13
	fst            shift, and enter state 14
	snd            shift, and enter state 15
	inr            shift, and enter state 16
	inl            shift, and enter state 17
	case           shift, and enter state 18
	pot            shift, and enter state 19
	sqrt           shift, and enter state 20

	E              goto state 21

State 21

	E -> E . '+' E                                      (rule 5)
	E -> E . '-' E                                      (rule 6)
	E -> E . '*' E                                      (rule 7)
	E -> E . '/' E                                      (rule 8)
	E -> E . '%' E                                      (rule 9)
	E -> E . '==' E                                     (rule 10)
	E -> E . '>' E                                      (rule 11)
	E -> E . '<' E                                      (rule 12)
	E -> E . '>=' E                                     (rule 13)
	E -> E . '<=' E                                     (rule 14)
	E -> E . '&&' E                                     (rule 15)
	E -> E . '||' E                                     (rule 16)
	E -> sqrt E .                                       (rule 20)
	E -> E . '[' var ']'                                (rule 33)

	num            reduce using rule 20
	float          reduce using rule 20
	var            reduce using rule 20
	bool           reduce using rule 20
	'('            reduce using rule 20
	')'            reduce using rule 20
	'+'            reduce using rule 20
	'-'            reduce using rule 20
	'*'            reduce using rule 20
	'/'            reduce using rule 20
	'%'            reduce using rule 20
	'=='           reduce using rule 20
	'>'            reduce using rule 20
	'<'            reduce using rule 20
	'>='           reduce using rule 20
	'<='           reduce using rule 20
	'&&'           reduce using rule 20
	'||'           reduce using rule 20
	not            reduce using rule 20
	if             reduce using rule 20
	then           reduce using rule 20
	else           reduce using rule 20
	let            reduce using rule 20
	in             reduce using rule 20
	end            reduce using rule 20
	lam            reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	','            reduce using rule 20
	'['            shift, and enter state 49
	fst            reduce using rule 20
	snd            reduce using rule 20
	inr            reduce using rule 20
	inl            reduce using rule 20
	case           reduce using rule 20
	of             reduce using rule 20
	'|'            reduce using rule 20
	pot            reduce using rule 20
	sqrt           reduce using rule 20
	%eof           reduce using rule 20


State 22

	E -> E . '+' E                                      (rule 5)
	E -> E . '-' E                                      (rule 6)
	E -> E . '*' E                                      (rule 7)
	E -> E . '/' E                                      (rule 8)
	E -> E . '%' E                                      (rule 9)
	E -> E . '==' E                                     (rule 10)
	E -> E . '>' E                                      (rule 11)
	E -> E . '<' E                                      (rule 12)
	E -> E . '>=' E                                     (rule 13)
	E -> E . '<=' E                                     (rule 14)
	E -> E . '&&' E                                     (rule 15)
	E -> E . '||' E                                     (rule 16)
	E -> pot E .                                        (rule 19)
	E -> E . '[' var ']'                                (rule 33)

	num            reduce using rule 19
	float          reduce using rule 19
	var            reduce using rule 19
	bool           reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	'+'            reduce using rule 19
	'-'            reduce using rule 19
	'*'            reduce using rule 19
	'/'            reduce using rule 19
	'%'            reduce using rule 19
	'=='           reduce using rule 19
	'>'            reduce using rule 19
	'<'            reduce using rule 19
	'>='           reduce using rule 19
	'<='           reduce using rule 19
	'&&'           reduce using rule 19
	'||'           reduce using rule 19
	not            reduce using rule 19
	if             reduce using rule 19
	then           reduce using rule 19
	else           reduce using rule 19
	let            reduce using rule 19
	in             reduce using rule 19
	end            reduce using rule 19
	lam            reduce using rule 19
	'{'            reduce using rule 19
	'}'            reduce using rule 19
	','            reduce using rule 19
	'['            shift, and enter state 49
	fst            reduce using rule 19
	snd            reduce using rule 19
	inr            reduce using rule 19
	inl            reduce using rule 19
	case           reduce using rule 19
	of             reduce using rule 19
	'|'            reduce using rule 19
	pot            reduce using rule 19
	sqrt           reduce using rule 19
	%eof           reduce using rule 19


State 23

	E -> E . '+' E                                      (rule 5)
	E -> E . '-' E                                      (rule 6)
	E -> E . '*' E                                      (rule 7)
	E -> E . '/' E                                      (rule 8)
	E -> E . '%' E                                      (rule 9)
	E -> E . '==' E                                     (rule 10)
	E -> E . '>' E                                      (rule 11)
	E -> E . '<' E                                      (rule 12)
	E -> E . '>=' E                                     (rule 13)
	E -> E . '<=' E                                     (rule 14)
	E -> E . '&&' E                                     (rule 15)
	E -> E . '||' E                                     (rule 16)
	E -> case E . of '{' inl var '=>' E '|' inr var '=>' E '}'    (rule 31)
	E -> E . '[' var ']'                                (rule 33)

	'+'            shift, and enter state 37
	'-'            shift, and enter state 38
	'*'            shift, and enter state 39
	'/'            shift, and enter state 40
	'%'            shift, and enter state 41
	'=='           shift, and enter state 42
	'>'            shift, and enter state 43
	'<'            shift, and enter state 44
	'>='           shift, and enter state 45
	'<='           shift, and enter state 46
	'&&'           shift, and enter state 47
	'||'           shift, and enter state 48
	'['            shift, and enter state 49
	of             shift, and enter state 80


State 24

	E -> inl '_' . T '(' E ')'                          (rule 29)

	'('            shift, and enter state 74
	'{'            shift, and enter state 75
	Int            shift, and enter state 76
	Float          shift, and enter state 77
	Bool           shift, and enter state 78

	T              goto state 79

State 25

	E -> inr '_' . T '(' E ')'                          (rule 30)

	'('            shift, and enter state 74
	'{'            shift, and enter state 75
	Int            shift, and enter state 76
	Float          shift, and enter state 77
	Bool           shift, and enter state 78

	T              goto state 73

State 26

	E -> E . '+' E                                      (rule 5)
	E -> E . '-' E                                      (rule 6)
	E -> E . '*' E                                      (rule 7)
	E -> E . '/' E                                      (rule 8)
	E -> E . '%' E                                      (rule 9)
	E -> E . '==' E                                     (rule 10)
	E -> E . '>' E                                      (rule 11)
	E -> E . '<' E                                      (rule 12)
	E -> E . '>=' E                                     (rule 13)
	E -> E . '<=' E                                     (rule 14)
	E -> E . '&&' E                                     (rule 15)
	E -> E . '||' E                                     (rule 16)
	E -> snd E .                                        (rule 28)
	E -> E . '[' var ']'                                (rule 33)

	num            reduce using rule 28
	float          reduce using rule 28
	var            reduce using rule 28
	bool           reduce using rule 28
	'('            reduce using rule 28
	')'            reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'*'            reduce using rule 28
	'/'            reduce using rule 28
	'%'            reduce using rule 28
	'=='           reduce using rule 28
	'>'            reduce using rule 28
	'<'            reduce using rule 28
	'>='           reduce using rule 28
	'<='           reduce using rule 28
	'&&'           reduce using rule 28
	'||'           reduce using rule 28
	not            reduce using rule 28
	if             reduce using rule 28
	then           reduce using rule 28
	else           reduce using rule 28
	let            reduce using rule 28
	in             reduce using rule 28
	end            reduce using rule 28
	lam            reduce using rule 28
	'{'            reduce using rule 28
	'}'            reduce using rule 28
	','            reduce using rule 28
	'['            shift, and enter state 49
	fst            reduce using rule 28
	snd            reduce using rule 28
	inr            reduce using rule 28
	inl            reduce using rule 28
	case           reduce using rule 28
	of             reduce using rule 28
	'|'            reduce using rule 28
	pot            reduce using rule 28
	sqrt           reduce using rule 28
	%eof           reduce using rule 28


State 27

	E -> E . '+' E                                      (rule 5)
	E -> E . '-' E                                      (rule 6)
	E -> E . '*' E                                      (rule 7)
	E -> E . '/' E                                      (rule 8)
	E -> E . '%' E                                      (rule 9)
	E -> E . '==' E                                     (rule 10)
	E -> E . '>' E                                      (rule 11)
	E -> E . '<' E                                      (rule 12)
	E -> E . '>=' E                                     (rule 13)
	E -> E . '<=' E                                     (rule 14)
	E -> E . '&&' E                                     (rule 15)
	E -> E . '||' E                                     (rule 16)
	E -> fst E .                                        (rule 27)
	E -> E . '[' var ']'                                (rule 33)

	num            reduce using rule 27
	float          reduce using rule 27
	var            reduce using rule 27
	bool           reduce using rule 27
	'('            reduce using rule 27
	')'            reduce using rule 27
	'+'            reduce using rule 27
	'-'            reduce using rule 27
	'*'            reduce using rule 27
	'/'            reduce using rule 27
	'%'            reduce using rule 27
	'=='           reduce using rule 27
	'>'            reduce using rule 27
	'<'            reduce using rule 27
	'>='           reduce using rule 27
	'<='           reduce using rule 27
	'&&'           reduce using rule 27
	'||'           reduce using rule 27
	not            reduce using rule 27
	if             reduce using rule 27
	then           reduce using rule 27
	else           reduce using rule 27
	let            reduce using rule 27
	in             reduce using rule 27
	end            reduce using rule 27
	lam            reduce using rule 27
	'{'            reduce using rule 27
	'}'            reduce using rule 27
	','            reduce using rule 27
	'['            shift, and enter state 49
	fst            reduce using rule 27
	snd            reduce using rule 27
	inr            reduce using rule 27
	inl            reduce using rule 27
	case           reduce using rule 27
	of             reduce using rule 27
	'|'            reduce using rule 27
	pot            reduce using rule 27
	sqrt           reduce using rule 27
	%eof           reduce using rule 27


State 28

	E -> '{' reglist . '}'                              (rule 32)
	reglist -> reglist . ',' reg                        (rule 35)

	'}'            shift, and enter state 71
	','            shift, and enter state 72


State 29

	reglist -> reg .                                    (rule 34)

	'}'            reduce using rule 34
	','            reduce using rule 34


State 30

	reg -> var . '=' E                                  (rule 36)

	'='            shift, and enter state 70


State 31

	E -> lam '(' . var ':' T ')' ':' T '->' E           (rule 25)

	var            shift, and enter state 69


State 32

	E -> let var . '=' E in E end                       (rule 24)

	'='            shift, and enter state 68


State 33

	E -> E . '+' E                                      (rule 5)
	E -> E . '-' E                                      (rule 6)
	E -> E . '*' E                                      (rule 7)
	E -> E . '/' E                                      (rule 8)
	E -> E . '%' E                                      (rule 9)
	E -> E . '==' E                                     (rule 10)
	E -> E . '>' E                                      (rule 11)
	E -> E . '<' E                                      (rule 12)
	E -> E . '>=' E                                     (rule 13)
	E -> E . '<=' E                                     (rule 14)
	E -> E . '&&' E                                     (rule 15)
	E -> E . '||' E                                     (rule 16)
	E -> if E . then E else E                           (rule 23)
	E -> E . '[' var ']'                                (rule 33)

	'+'            shift, and enter state 37
	'-'            shift, and enter state 38
	'*'            shift, and enter state 39
	'/'            shift, and enter state 40
	'%'            shift, and enter state 41
	'=='           shift, and enter state 42
	'>'            shift, and enter state 43
	'<'            shift, and enter state 44
	'>='           shift, and enter state 45
	'<='           shift, and enter state 46
	'&&'           shift, and enter state 47
	'||'           shift, and enter state 48
	then           shift, and enter state 67
	'['            shift, and enter state 49


State 34
